Fixed logging messages